--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Perl extension MooX::ChainedAttributes.
 
 {{$NEXT}}
+ - Support Moo's 'is' attribute correctly.
 
 0.02      2014-08-25
  - Add a chain() function, like how MooX::AliasedAttributes has an alias()
