--- a/README.pod
+++ b/README.pod
@@ -57,6 +57,16 @@ To port the above to L<Moo> just change it to:
 
 Aran Clary Deltac <bluefeet@gmail.com>
 
+=head1 CONTRIBUTORS
+
+=over
+
+=item *
+
+Graham Knop <haarg@haarg.org>
+
+=back
+
 =head1 LICENSE
 
 This library is free software; you can redistribute it and/or modify
