--- a/Changes
+++ b/Changes
@@ -2,16 +2,22 @@ Revision history for Perl extension MooX::ChainedAttributes.
 
 {{$NEXT}}
 
+ - Apply chaining using an accessor generator role. (haarg)
+
 0.04      2015-02-04
+
  - Don't instantiate class before modifying it in test. (haarg)
 
 0.03      2014-08-26
+
  - Support Moo's 'is' attribute correctly.
 
 0.02      2014-08-25
+
  - Add a chain() function, like how MooX::AliasedAttributes has an alias()
    function.
 
 0.01      2014-08-22
+
  - First release.
 
