--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Revision history for Perl extension MooX::ChainedAttributes.
 
 {{$NEXT}}
 
+ - Fix some non-helpful verbiage in the description.
+
 0.05 2016-05-20
 
  - Apply chaining using an accessor generator role. (haarg)
